# memory-pilot

./: CURSOR_ROADMAP.md  Cargo.toml  README.md
src/: db.rs  embedding.rs  gc.rs  graph.rs  main.rs  tools.rs  watcher.rs
